added css to footer, added icons to navigation bar

--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
 
 <body>
   <div id = "topnav">
-    <a href = "#Konto"> Google Konto A </a>
-    <a href = "#benachrichtigungen"> Benachrichtigungen</a>
-    <a href = "#apps"> Apps Button </a>
+    <a href = "#Konto"><img class = "letter" src = "google_userletter.jpg"> </a>
+    <a href = "#benachrichtigungen" style = "text-decoration:none"><span class = "bell"> &#x1f514;</a>
+    <a href = "#apps">
+        <div id = "square"> </div>
+        <div id = "square"> </div>
+        <div id = "square"> </div>
+
+        <div id = "square"> </div>
+        <div id = "square"> </div>
+        <div id = "square"> </div>
+
+        <div id = "square"> </div>
+        <div id = "square"> </div>
+        <div id = "square"> </div>
+    </a>
     <a href = "#bilder"> Bilder </a>
     <a href = "#gmail"> Gmail </a>
   </div>
@@ -26,13 +38,22 @@
   </div>
   </center>
 
-  <div class= = "btmnav">
-    Deutschland
-  </div>
-  <div class = "btmnav">
-    <a href = "#werbung"> Werbeprogramme </a>
-    <a href = "#unternehmen"> Unternehmen </a>
-    <a href = "Über Google"> Über Google </a>
+  <div class = "fbar">
+    <div class = "btmtop">
+      Deutschland
+    </div>
+    <div class = "btmbtm">
+      <span id = "rft">
+        <a href = "#datenschutz"> Datenschutzerklärung </a>
+        <a href = "#nutzungsbedingungen"> Nutzungsbedingungen </a>
+        <a href = "#einstellungen"> Einstellungen </a>
+      </span>
+      <span id = "lft">
+        <a href = "#werbung"> Werbeprogramme </a>
+        <a href = "#unternehmen"> Unternehmen </a>
+        <a href = "Über Google"> Über Google </a>
+      </span>
+    </div>
   </div>
 
 
