--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <doctype! html>
+<html>
 <head>
   <META HTTP-EQUIV="content-type" CONTENT="text/html; charset=utf-8">
   <link rel = "stylesheet" href = "main-css.css">
@@ -59,3 +60,4 @@
 
 
 </body>
+</html>
